@@ -1,3 +1,8 @@
+Fri Feb 26 15:36:12 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * tests/Bug_2609_Regression_Test.cpp: Fix unused arg warning and
+          adjust for hosts without IPv6.
+
 Fri Feb 26 14:48:01 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>
 
         * tests/Timer_Queue_Test.cpp (handle_timeout): Fix unused argument
